# piscina_python_for_datascience

./: .gitignore  docker-compose.yml
.devcontainer/: devcontainer.json  docker-compose.yml
docker/: dockerfile
docker/scripts/: .zshrc  start.sh
mod00/: .flake8  .gitignore  pyproject.toml
mod00/ex00/: Hello.py
mod00/ex01/: format_ft_time.py
mod00/ex02/: find_ft_type.py  tester.py
mod00/ex03/: NULL_not_found.py
mod00/ex04/: whatis.py
mod00/ex05/: building.py  test_building.py
mod00/ex06/: filterstring.py  ft_filter.py
mod00/ex07/: sos.py
mod00/ex08/: Loading.py
mod00/ex09/: LICENSE  README.md  ft_package.py  pyproject.toml  setup.py
project/: pyproject.toml
