[project]
name = "python-for-datascience"
version = "0.1.0"
description = "Pacote com exercícios do módulo 00 para a piscina de python para datascience"
authors = [
    {name = "Everton",email = "egeraldo@student.42sp.org.br"}
]

requires-python = ">=3.10,<4.0"
dependencies = [
    "taskipy (>=1.14.1,<2.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pytest (>=9.0.1,<10.0.0)"
]

[tool.poetry]
packages = [{include = "ex09", from = "."}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 79


[tool.taskipy.tasks]
run = "poetry run "
lint = "black . && flake8"

[dependency-groups]
dev = [
    "black (>=25.11.0,<26.0.0)"
]

