[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
version = "0.0.1"
description = "A simple Python package"
authors = [{name = "Everton Vaz", email = "egeraldo@student.42sp.org.br"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "build>=1.4.0",
]